2001-09-07  Martin Baulig  <baulig@suse.de>

	Removing the libgnome dependency - part I.

	* bonobo/bonobo-ui-main.c (bonobo_ui_init_full): Call
	g_set_prgname().

	* bonobo/bonobo-file-selector-util.c (listener_cb): Make the
	`event_name' and `any' arguments const to make it compile
	without warnings.
	(create_control): Usfe g_get_prgname() instead of
	gnome_program_get_app_id().
	(concat_dir_and_file): New static function, copied from libgnome.
	(ok_clicked_cb): Use the local concat_dir_and_file() instead of
	g_concat_dir_and_file() from libgnome.

	* bonobo/bonobo-dock-item.c: #include <bonobo/bonobo-i18n.h>
	instead of <libgnome/gnome-i18n.h>.

2001-09-07  Martin Baulig  <baulig@suse.de>

	* samples/bonoboui-hello/helloapp.c: Don't #include <libgnome.h>.
	* samples/bonoboui-hello/main.c: ditto.
	* tests/test-selector.c: ditto.

2001-09-07  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-ui-component.c
	(ui_event, impl_Bonobo_UIComponent_execVerb): Reflect latest
	bonobo_closure_invoke() API changes.

2001-09-07  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-canvas-component.c: Use the bonobo-ui-marshal.[ch]
	marshalling functions.
	* bonobo/bonobo-control-frame.c: ditto.
	* bonobo/bonobo-ui-engine.c: ditto.
	* bonobo/bonobo-ui-xml.c: ditto.

	* bonobo/bonobo-ui-marshal.list: Added `VOID:STRING,BOOLEAN',
	`BOOLEAN:POINTER', `VOID:POINTER,STRING', `VOID:POINTER,POINTER'.

2001-09-07 Glynn Foster <glynn.foster@sun.com>
	
	* Makefile.am: Change includedir to gnome-2.0/ instead of gnome/2/

2001-09-03  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-component.c (bonobo_ui_component_set_status): 
	do escaping on set string.

	* bonobo/bonobo-ui-node.c (append_escaped_text): cpy from glib.
	(internal_to_string): do entity encoding for basic entities.

	* tests/test-ui.c (main): upd. regression tests.

2001-09-06  Anders Carlsson  <andersca@gnu.org>

	* bonobo/Makefile.am (libbonoboincludedir): Change includedir
	to gnome-2.0/ instead of gnome/2/
